{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "ae2d6f2c-b953-41d5-ad53-d4ce8613b4fe",
            "actions": [
                {
                    "name": "PlayerOne_DirectionKeys",
                    "type": "Button",
                    "id": "246153fd-569b-4f0d-924a-9184b0d3a684",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerOne_PowerInput",
                    "type": "Button",
                    "id": "eeedba51-7060-4b21-ad70-347f7f4ce8a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerTwo_DirectionKeys",
                    "type": "Button",
                    "id": "699a72af-c3ec-45cd-b6fe-baa2c457a676",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerTwo_PowerInput",
                    "type": "Button",
                    "id": "5e96b90a-4b31-4e0e-90d6-bff3ecd1d55c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "833f8c07-3144-4350-8e60-cec797886fef",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerOne_DirectionKeys",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bbf74f7f-c134-48cd-9150-5a6bb42dd68f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerOne_DirectionKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "557d09be-c82a-4aab-a467-4a7230f2ed91",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerOne_DirectionKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowKeys",
                    "id": "f8668bc3-42d4-45e7-a096-2f4a25f5fa7b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerTwo_DirectionKeys",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a66a83bd-e388-4d92-802b-817723e58022",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerTwo_DirectionKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "fd54a006-3a3f-4dda-aca8-7e74b7e489ee",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerTwo_DirectionKeys",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8a50384c-3506-410f-a425-f229fed5a91e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerOne_PowerInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe9e62d3-ca0b-47c7-954d-d641b88b5892",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerTwo_PowerInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "218ad9fc-57ce-4281-9dd6-0e3845090361",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "97877024-0e99-4235-9876-637c8213f6a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e956eac-9e17-488c-ae3b-204b231284d0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}